components/NaturalLanguage.module.css
.inputNaturalLanguage {
    font: 30px "Century Gothic", Futura, sans-serif;
    line-height: 100px;
}

.paramText {
    background-color: lightblue;
    text-align: center;
}

.removeButton {
    position: absolute;
    cursor: pointer;
    border-radius: 50%;
    left: 0px;
    top: 0px;
}

.groupButton {
    position: absolute;
    right: 0px;
    cursor: pointer;
    right: 0px;
    top: 0px;
}

.groupSelectionCheckbox {
    position: absolute;
    width: 30px;
    height: 30px;
    top: -14px;
    right: 0px;
    cursor: pointer;
}

.container {
    position: relative;
    display: inline-block;
    padding: var(--item-padding);
}

.paramData {
    /*position: absolute;*/
    position: relative;
    top: 20px;
    left: 0px;
    padding: 10px;
    margin-bottom: 30px;
}

.paramDataChunk {
    margin-bottom: 10px;
}

.itemContainer {
    vertical-align: top;
}

.possibleValuesArea {
    display: block;
}

.request {
    margin: 40px;
}

.displayNone {
    display: none;
}

.editBackground {
    background-color: rgb(240, 240, 240);
}

.grayedOut {
    color: gray;
}

.saveButton {
    /*--height: 30px;
    height: var(--height);*/
    font-size: large;
    /*position: absolute;
    left: 0px;
    top: calc(-1.5 * var(--height));*/
    cursor: pointer;
}

.topButtonRow {
    display: flex;
    justify-content: center;
}

.topButton {
    font-size: large;
    cursor: pointer;
    margin: 10px;
}

.relative {
    position: relative;
}

.addValuesButton {
    cursor: pointer;
}

.removeValueButton {
    cursor: pointer;
}

.indented {
    padding-left: 30px;
}

.group {
    border: 3px dotted darkgray;
    display: inline-table;
    padding: var(--item-padding);
    margin-top: var(--item-padding);
    margin-bottom: var(--item-padding);
}

.errorMessage {
    color: red;
    font-size: large;
    font-weight: bold;
    text-align: center;
}

.hovered {
    background-color: lightyellow;
    border: 1px dotted darkgray;
}

.notHovered {
    border: 1px dotted transparent;
}

